--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,17 @@
         The University of North Carolina at Wilmington is an Institutional Member of NIRSA. NIRSA is the leading resource for professional and student development, education, and research in collegiate recreational sports. Campus Recreation staff members have a rich tradition of participation within NIRSA.</string>
     <string name="student_rec_caption">Picture of the Student Recreation Center</string>
 
-    <string name='cis_name'>CIS Building</string>
-    <string name="cis_description">The Computer Information Systems (CIS) building was constructed to house the Information Systems and Operations Management Department from the Cameron School of Business and the Department of Computer Science from the College of Arts and Sciences. The CIS Building, a new 51,731 square-foot state-of-the-art facility on the UNCW campus, opened January 10, 2007 for the new school semester. Work on the facility began on July 29, 2004 with the groundbreaking, and competed in December of 2006. The building cost approximately $12.8 million and was funded by the North Carolina State Bond campaign of 2000.Housed within the new building is the Financial Markets Room and, thanks to a donation from Edward Jones and over 50 if its financial advisers, the Edward Jones Financial Lab. Both rooms contain a stock board and ticker, however the Edward Jones Financial Lab also includes the Bloomberg Trading Terminal. With this terminal, students and faculty have the ability to trade stocks directly with the New York Stock Exchange, NASDAQ and more.</string>
-    <string name="cis_caption">Picture of the CIS Building</string>
+    <string name='education_name'>Education Building</string>
+    <string name="education_description"> Opened in 2004, the Education Building is a 3-story, 80,500-square-foot facility. In 1997, Robert E. Tyndall, then Dean of the Watson School of Education, approached Chancellor James R. Leutze with his concept for the new facility. The School had long outgrown King Hall, where it had been for 27 years. Dr. Tyndall proposed a new education building to serve as a “living tribute to the teaching profession.” In 1998 UNCW received planning funds ($1,775,000) from the North Carolina legislature to design the building.
+
+    Thanks to the successful Higher Education Bond Referendum of 2000, the Watson School of Education received $18,725,000 for a new building. 73% of voters statewide favored the bond, and it passed in all 100 counties. Groundbreaking took place on January 17, 2002, and the building was officially occupied in September, 2004.
+
+    The facility houses the Watson School of Education, the Professional Development System, the Service Office of Public Schools, the Teaching and Principal Fellows, and the Curriculum Materials Center. Prominent is the North Carolina Teachers Legacy Hall, an exhibit designed to honor educators and administrators, showcase historic milestones in the teaching profession and celebrate the continuation of teaching excellence in the state of North Carolina.
+
+        The year 2004 marked the opening of the new building and the 40th anniversary of teacher education at UNCW. The Department of Education and Psychology of Wilmington College was originally housed in Hoggard Hall. In 1969 the department moved temporarily to Kenan Hall and the following year to the new Education/Psychology building--King Hall. In 1973, Education became its own department, separate from Psychology. In 1979, the University reorganized into the College of Arts and Sciences, the School of Business Administration, and the School of Education, and department chair Roy Harkin became Dean of the School of Education.</string>
+
+    The past forty-plus years have seen more than name and building changes. Now the Watson School of Education is the third largest producer of certified teachers out of forty-seven institutions in North Carolina.    <string name="cis_caption">Picture of the CIS Building</string>
+    <string name = "education_caption">This is a picture of Watson School of Education</string>
 
     <string name="randall_name">Randall Library</string>
     <string name="randall_caption">Picture of Randall Library</string>
@@ -37,7 +45,5 @@
 
     <string name="about_link"><a href="https://library.uncw.edu/archives_special/archives">University Archives</a></string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
